--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -592,6 +592,13 @@ Nutze den Status *Gesperrt in Status 4*, um Ware in einem Lagerort zu blockieren
 Beachte, dass gesperrte Ware für Marktplätze weiterhin verfügbar ist.
 ====
 
+[TIP]
+.Verfügbarkeit des Lagerorts
+====
+Ist ein Lagerort leer, wird er beim Wareneingang als verfügbar angezeigt und Ware kann eingebucht werden. Befindet sich bereits 1 Artikel in einem Lagerort, wird dieser nicht mehr als verfügbar angezeigt. Du kannst dort allerdings trotzdem Ware einbuchen. +
+In der Übersicht der Lagerorte werden verfügbare Lagerorte mit einem grünen Punkt gekennzeichnet. Nicht verfügbare Lagerorte sind mit einem roten Punkt gekennzeichnet.
+====
+
 [#530]
 ==== Limitierungen
 
