--- a/docs/de-de/modules/daten/pages/lager-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/lager-exportieren.adoc
@@ -5,162 +5,454 @@
 :id: FUM682Y
 :author: team-stock
 
-Diese Handbuchseite enthält Informationen zum Export-Format *Lager*, mit dem du anhand von Katalogen Lagerdaten aus deinem plentymarkets System exportieren kannst.
-Solltest du mit der Funktionsweise der Kataloge noch nicht vertraut sein, informiere dich zunächst auf der Handbuchseite xref:daten:dateiexport.adoc#[Standardformate nutzen]. Dort ist beschrieben, wie du Kataloge erstellst und verwaltest.
+////
+zuletzt bearbeitet 10.08.2022
+////
+
+//ToDo - Beispiel ergänzen für die grüne Info-Box in die Einleitung - siehe andere Katalog-Formate wie Warenbestand als Beispiel
+
+Diese Seite beschreibt die Datenfelder und Filter, die dir beim Export von Lager- und Lagerort-Daten über das Katalog-Tool zur Verfügung stehen.
+Diese Seite dient lediglich als Referenz und setzt voraus, dass du bereits Grundkenntnisse über das xref:daten:dateiexport.adoc#[Katalog-Tool] hast.
+
+[discrete]
+==== Format-Typ: Lager
+
+Der auf dieser Seite beschriebene Format-Typ befindet sich im Menü *Daten » Kataloge*.
+Beim Erstellen eines neuen Katalogs wählst du zuerst das Standardformat aus der oberen Dropdown-Liste.
+Danach kannst du den Format-Typ *Lager* aus der mittleren Dropdown-Liste wählen.
+
+image::daten:katalog-lager.png[]
 
 [TIP]
-.Kein Export an Marktplätze
+.Was ist ein Standardformat?
 ====
-Bei dem Exportformat *Lager* handelt es sich um ein sog. Standardformat, d.h. ein Format, mit dem du Daten exportieren, aber nicht an einen Marktplatz übertragen kannst.
+
+* *_Definition_*:
+Ein Standardformat wird verwendet, um spezifische Daten aus deinem plentymarkets System zu exportieren.
+Falls nötig, kannst du die Daten anschließend überarbeiten und wieder importieren.
+
+* *_Abgrenzung_*:
+Beachte, dass Standardformate lediglich Daten aus deinem System exportieren.
+Sie übertragen diese Daten nicht an Marktplätze.
 ====
 
 [#10]
-== Verfügbare Datenfelder
+== Datenfelder
 
-In der folgenden Tabelle findest du alle verfügbaren Datenfelder des Export-Formats *Lager* sowie eine Erläuterung zur Bedeutung dieser Felder.
+Dieses Kapitel enthält eine Liste aller Lager-Datenfelder, die mit dem Katalog-Tool exportiert werden können.
 
-[[tabelle-lager]]
-.Datenfelder für Lagerdaten
-[cols="2,3"]
+=== Lager
+
+[TIP]
+.Welche Daten sollen exportiert werden?
+====
+Möchtest du ausschließlich Lagerdaten exportieren?
+Das heißt, soll die Exportdatei eine Zeile pro Lager anstatt eine Zeile pro Lagerort enthalten?
+Falls ja, dann nutze den xref:daten:lager-exportieren.adoc#20[Filter: Nur Lagerdaten].
+====
+
+[cols="1,3a"]
 |===
-|*Datenfeld* |*Erläuterung*
+|Feld |Erläuterung
 
-2+^|*Lager*
+| *Lager-ID*
+|
+Die ID des Lagers.
 
-|*Lager-ID*
-|ID des Lagers
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Feld: ID].
 
-|*Lagername*
-|Name des Lagers
+| *Lagername*
+|
+Der Name des Lagers.
 
-|*Notiz*
-|Notizen zum Lager
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Eingabefeld: Lagername].
 
-|*Lagertyp-ID*
-|ID des Lager-Typs
+| *Notiz*
+|
+Die Notiz des Lagers.
 
-|*Verfügbarkeit mit Bestand*
-|Verfügbarkeit der Varianten mit Bestand
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Eingabefeld: Notiz].
 
-|*Verfügbarkeit ohne Bestand*
-|Verfügbarkeit der Varianten ohne Bestand
+| *Lagertyp-ID*
+|
+Der Typ des Lagers.
+Wird durch die Lagertyp-ID angegeben.
 
-|*Nach Versandprofil aufteilen*
-|Aufteilung nach Versandprofil
+[cols="1,1"]
+!===
 
-|*Reparaturlager-ID*
-|ID des Reparaturlagers
+!`0`
+!Vertrieb
 
-|*Inventurmodus aktiv*
-|Zeigt an, ob der Inventurmodus aktiv ist
+!`1`
+!Reparatur
 
-|*Logistiktyp*
-|Logistiktyp
+!`4`
+!Vorrat
 
-|*Aktualisiert am*
-|Datum der Aktualisierung
+!`5`
+!Umschlag
 
-|*Erstellt am*
-|Erstelldatum
+!`6`
+!Verteiler
 
-2+^|*Dimension*
+!`7`
+!Sonstiges
+!===
 
-|*Ebene*
-|Ebene
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Lagertyp].
 
-|*Name der Elterndimension*
-|Name der übergeordneten Dimension
+| *Verfügbarkeit mit Bestand*
+|
+Die Verfügbarkeit mit Bestand.
 
-|*Präfix der Dimension*
-|Präfix der Dimension
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Verfügbarkeit mit Bestand].
 
-|*Trenner*
-|Trennzeichen
+| *Verfügbarkeit ohne Bestand*
+|
+Die Verfügbarkeit ohne Bestand.
 
-|*Im Namen anzeigen*
-|Im Lagerortnamen anzeigen
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Verfügbarkeit ohne Bestand].
 
-|*Für Laufweg berücksichtigen*
-|In den Laufweg einfließen lassen
+| *Nach Versandprofil aufteilen*
+|
+Gibt an, ob nach Versandprofil gesplittet wird.
 
-2+^|*Lagerort*
+[cols="1,1"]
+!===
 
-|*Lagerort-ID*
-|ID des Lagerortes
+!Zeile ist leer
+!Nein
 
-|*Lagerortname*
-|Name des Lagerortes (ohne Pfad)
+!`1`
+!Ja
 
-|*Zweck*
-|Verwendungszweck des Lagerortes
+!===
 
-|*Status*
-|Status des Lagerortes
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Nach Versandprofil splitten].
 
-|*Position*
-|Position des Lagerortes
+| *Reparaturlager-ID*
+|
+Die ID des zugeordneten Reparaturlagers.
 
-|*Vollständiger Lagerortname*
-|Vollständiger Name des Lagerortes (inklusive Pfad)
+*_Hinweis_*:
+In der Export-Datei bedeutet `0`, dass kein Reparaturlager zugeordnet wurde.
+Das heißt, die Einstellung --- ist gesetzt.
 
-|*Lagerort-Typ*
-|Typ des Lagerortes
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Zugeordnetes Reparaturlager].
 
-|*Notizen*
-|Notizen zum Lagerort
+| *Inventurmodus aktiv*
+|
+Gibt an, ob der Inventurmodus aktiviert ist.
 
-|*Verfügbarkeit*
-|Verfügbarkeit des Lagerortes: Ist ein Lagerort leer, wird er beim Wareneingang als verfügbar angezeigt und Ware kann eingebucht werden. Befindet sich bereits 1 Artikel in einem Lagerort, wird dieser nicht mehr als verfügbar angezeigt. Du kannst dort allerdings trotzdem Ware einbuchen. +
-Beim Export gibt es die beiden folgenden Werte: `0` = nicht verfügbar; `1` = verfügbar.
+[cols="1,1"]
+!===
 
-2+^|*Ebene*
+!Zeile ist leer
+!Nein. Häkchen ist nicht gesetzt.
 
-|*Ebenen-ID*
-|ID der Ebene bzw. der niedrigsten Dimension des Lagerortes. Nutzt du einen Filter, ist es die ID der gefilterten Dimension.
+!`1`
+!Ja. Häkchen ist gesetzt.
 
-|*ID der Elternebene*
-|ID der übergeordneten Ebene
+!===
 
-|*Position der Ebene*
-|Position der Ebene
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Checkbox: Inventur-Modus aktiv].
 
-|*Name der Ebene*
-|Name der Ebene
+| *Logistiktyp*
+|
+Der Logistiktyp des Lagers.
 
-|*Pfadname der Ebene*
-|Pfadname
+[cols="1,1"]
+!===
+
+!`own`
+!Eigenes Lager
+
+!`amazon`
+!Amazon
+
+!`dhlFulfillment`
+!DHL Fulfillment
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#300[Einrichtung » Waren » Lager » [Lager öffnen\] » Einstellungen » Dropdown-Liste: Logistiktyp].
+
+| *Aktualisiert am*
+|
+Der Zeitstempel, der angibt, wann das Lager zuletzt geändert wurde.
+
+| *Erstellt am*
+|
+Der Zeitstempel, der angibt, wann das Lager erstellt wurde.
+
+|===
+
+=== Dimension
+
+[TIP]
+.Welche Daten sollen exportiert werden?
+====
+Möchtest du ausschließlich Lagerdaten exportieren?
+Das heißt, soll die Exportdatei eine Zeile pro Lager anstatt eine Zeile pro Lagerort enthalten?
+Falls ja, dann nutze den xref:daten:lager-exportieren.adoc#20[Filter: Nur Lagerdaten].
+====
+
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
+
+| *Ebene*
+|
+Das Level der Dimension.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#400[Einrichtung » Waren » Lager » [Lager öffnen\] » Dimensionen » Level].
+
+//weitere Infos ergänzen
+| *Name der Elterndimension*
+|
+Der Name der übergeordneten Dimension.
+
+| *Präfix der Dimension*
+|
+Das Präfix der Dimension.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#400[Einrichtung » Waren » Lager » [Lager öffnen\] » Dimensionen » Eingabefeld: Präfix].
+
+| *Trenner*
+|
+Das Trennzeichen der Dimension.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#400[Einrichtung » Waren » Lager » [Lager öffnen\] » Dimensionen » Dropdown-Liste: Trenner].
+
+| *Im Namen anzeigen*
+|
+Gibt an, ob die Dimension im Lagerortnamen angezeigt wird.
+
+[cols="1,1"]
+!===
+
+!Zeile ist leer
+!Nein. Häkchen ist nicht gesetzt.
+
+!`1`
+!Ja. Häkchen ist gesetzt.
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#400[Einrichtung » Waren » Lager » [Lager öffnen\] » Dimensionen » Checkbox: Im Namen anzeigen].
+
+| *Für Laufweg berücksichtigen*
+|
+Gibt an, ob die Dimension für den Laufweg berücksichtigt wird.
+
+[cols="1,1"]
+!===
+
+!Zeile ist leer
+!Nein. Häkchen ist nicht gesetzt.
+
+!`1`
+!Ja. Häkchen ist gesetzt.
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#400[Einrichtung » Waren » Lager » [Lager öffnen\] » Dimensionen » Checkbox: Position für Laufweg berücksichtigen].
+
+|===
+
+=== Lagerort
+
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
+
+| *Lagerort-ID*
+|
+Die ID des Lagerorts.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: ID].
+
+| *Lagerortname*
+|
+Der Name des Lagerorts (ohne den vollständigen Pfad).
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » [Lagerort öffnen\] Eingabefeld: Lagerort].
+
+*_Beispiel_*:
+Wenn der vollständige Pfad des Lagerorts H2:R1:SL4 lautet, dann ist der Name des Lagerorts SL4.
+
+*_Hinweis_*:
+Wenn du den vollständigen Pfad des Lagerorts exportieren möchtest, dann verwende stattdessen das Feld *Vollständiger Lagerortname*.
+
+| *Zweck*
+|
+Der Zweck des Lagerorts.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: Zweck].
+
+| *Status*
+|
+Der Status des Lagerorts.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: Status].
+
+| *Position*
+|
+Die Position des Lagerorts.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: Position].
+
+| *Vollständiger Lagerortname*
+|
+Der vollständige Name des Lagerorts (inklusive Pfadangabe).
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: Lagerort].
+
+*_Hinweis_*:
+Wenn du nur den Namen des Lagerorts (ohne Pfad) exportieren möchtest, dann verwende stattdessen das Feld *Lagerortname*.
+
+| *Lagerort-Typ*
+|
+Der Typ des Lagerorts.
+
+*_Hinweis_*:
+Der Typ wird bei der Generierung von Lagerorten ausgewählt.
+
+| *Notizen*
+|
+Die Notiz des Lagerorts.
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » [Lagerort öffnen\] Eingabefeld: Notizen].
+
+| *Verfügbarkeit*
+|
+Gibt an, ob der Lagerort verfügbar ist.
+
+[cols="1,2"]
+!===
+
+!`0`
+!Nein, der Lagerort ist nicht verfügbar.
+Es wird ein roter Punkt in der Übersicht angezeigt.
+
+!`1`
+!Ja, der Lagerort ist verfügbar.
+Es wird ein grüner Punkt in der Übersicht angezeigt.
+
+!===
+
+Entspricht der Option im Menü: xref:warenwirtschaft:lager-einrichten.adoc#500[Einrichtung » Waren » Lager » [Lager öffnen\] » Lagerorte » Spalte: Verfügbarkeit].
+
+|===
+
+=== Ebene
+
+[cols="1,3a"]
+|===
+|Feld |Erläuterung
+
+| *Ebenen-ID*
+|
+Die ID der Ebene.
+Das heißt, die ID der Dimension, die direkt vor dem Lagerort steht.
+
+*_Beispiel_*:
+Wenn der vollständige Pfad des Lagerorts H2:R1:SL4 lautet, dann ist die Ebene R1.
+Nutze dieses Feld, um die ID von R1 zu exportieren, z.B. "4762".
+
+//weitere Infos ergänzen
+| *ID der Elternebene*
+|
+Die ID der übergeordneten Ebene.
+
+| *Position der Ebene*
+|
+Die Position der Ebene.
+Das heißt, die Position der Dimension, die direkt vor dem Lagerort steht.
+
+*_Beispiel_*:
+Wenn der vollständige Pfad des Lagerorts H2:R1:SL4 lautet, dann ist die Ebene R1.
+Nutze dieses Feld, um die Position von R1 zu exportieren, z.B. "3".
+
+| *Name der Ebene*
+|
+Der Name der Ebene.
+Das heißt, der Name der Dimension, die direkt vor dem Lagerort steht.
+
+*_Beispiel_*:
+Wenn der vollständige Pfad des Lagerorts H2:R1:SL4 lautet, dann ist die Ebene R1.
+Nutze dieses Feld, um den Namen "R1" zu exportieren.
+
+| *Pfadname der Ebene*
+|
+Der vollständige Name der Ebene (inklusive Pfadangabe).
+Das heißt, der vollständige Name der Dimension, die direkt vor dem Lagerort steht.
+
+*_Beispiel_*:
+Wenn der vollständige Pfad des Lagerorts H2:R1:SL4 lautet, dann ist die Ebene R1.
+Nutze dieses Feld, um den Pfadnamen "H2:R1:" zu exportieren.
 
 |===
 
 [#20]
-== Filter hinzufügen
+== Filter
 
-Um nur bestimmte Lagerdaten zu exportieren, kannst du Filter wählen und somit die Daten eingrenzen. Wie du Filter hinzufügst, erfährst du in xref:daten:dateiexport.adoc#filter-data[diesem Kapitel].
+Dieses Kapitel enthält eine Liste der Filter, mit denen du einschränken kannst, welche Daten in die Exportdatei aufgenommen werden sollen.
 
-[#30]
-=== Verfügbare Filter
+[TIP]
+.Filter können kombiniert werden
+====
+Du kannst mehrere Filter wählen und somit beispielsweise nach Daten aus einem bestimmten Lager und auf einer bestimmten Dimensions-Ebene filtern.
+====
 
-In der folgenden Tabelle findest du alle für das Export-Format *Lager* verfügbaren Filter sowie eine Erläuterung zur Funktion des jeweiligen Filters.
-
-[[tabelle-filter-lager]]
-.Filter für Lagerdaten
-[cols="2,3"]
+[cols="1,3a"]
 |===
-|*Filter* |*Erläuterung*
+|Filter |Erläuterung
 
-|*Lager*
-|Beschränkt den Export auf die gewählten Lager. Wähle ein oder mehrere Lager aus der Dropdown-Liste.
+| *Lager*
+|
+Beschränkt den Export auf ein bestimmtes Lager.
+Wähle ein oder mehrere Lager aus der Dropdown-Liste aus.
 
-|*Dimensions-Ebene*
-|Beschränkt den Export auf eine bestimmte Ebene eines Lagers.
-Hast du eine Ebene gewählt, z.B. Ebene 3, werden nur die Dimensionen dieser Ebene exportiert. +
-Bei einer Lagerstruktur mit dem Aufbau *Halle > Regal > Fach > Boden > Lagerort* würden also alle Fächer exportiert werden, da diese die 3. Ebene bilden. +
-*_Tipp:_* Klicke auf *Vorschau*, um zu prüfen, welche Daten für den Export gewählt wurden.
+*_Filter-Kombination_*:
+Möchtest du ausschließlich Lagerdaten exportieren?
+Das heißt, soll die Exportdatei eine Zeile pro Lager anstatt eine Zeile pro Lagerort enthalten?
+Falls ja, dann nutze diesen Filter zusammen mit dem Filter *Nur Lagerdaten*.
 
-|*Pfadname der Ebene beginnend mit*
-|Beschränkt den Export auf die Daten unterhalb einer bestimmten Dimension. Lautet der Pfadname der Ebene beispielsweise *Halle 1 - Regal 4 - Fach 3 - Boden 8* und du möchtest alles unterhalb von Boden 8 der spezifischen Dimension exportieren, gib `H1-R4-F3-B8` in das Eingabefeld des Filters ein.
+*_Tipp_*:
+Nutze die Vorschaufunktion, um zu prüfen, welche Daten exportiert werden.
 
-|*Nur Lagerdaten*
-|Beschränkt den Export auf die Lagerdaten, wie die Lager-ID und den Lagernamen.
-Standardmäßig werden mit diesem Filter die Daten aller Lager exportiert. Möchtest du allerdings nur die Daten bestimmter Lager exportieren, wähle zusätzlich den Filter *Lager*.
+| *Dimensions-Ebene*
+|
+Beschränkt den Export auf Dimensionen eines bestimmten Levels.
+Wähle das Level aus der Dropdown-Liste aus.
+
+*_Beispiel_*:
+Dein Lager ist im Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Dimensionen* wie folgt strukturiert:
+
+* Halle = Level 1
+* Regal = Level 2
+* Fach = Level 3
+* Boden = Level 4
+
+Wählst du Level 3, dann werden alle Fächer exportiert.
+
+*_Tipp_*:
+Nutze die Vorschaufunktion, um zu prüfen, welche Daten exportiert werden.
+
+| *Pfadname der Ebene beginnend mit*
+|
+Beschränkt den Export auf Daten unterhalb einer bestimmten Dimension.
+Gib den Pfadnamen in das Eingabefeld ein.
+
+*_Beispiel_*:
+Die Ebene lautet *Halle 1 - Regal 4 - Fach 3 - Boden 8*.
+Du möchtest alles unterhalb von Boden 8 exportieren.
+Dazu gibst du den Pfadnamen in das Eingabefeld ein: in diesem Fall `H1-R4-F3-B8`.
+
+| *Nur Lagerdaten*
+|
+Beschränkt den Export, damit er ausschließlich Lagerdaten enthält.
+Das heißt, die Exportdatei enthält eine Zeile pro Lager anstatt eine Zeile pro Lagerort.
 |===
