ADD more stuff new order ui

--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -105,12 +105,11 @@ include::partial$create-order-type.adoc[]
 
 [#create-document-credit-note]
 == Dokument Gutschrift erstellen
-// noch notwendig?
+
 Nach dem Anlegen des Gutschriftauftrags muss das Dokument *Gutschrift* direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen dieses Dokuments, muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
 
 Bevor du aber das Dokument im Gutschriftauftrag erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf anpassen.
 
-// auf neue UI anpassen
 [.instruction]
 Dokument *Gutschrift* erstellen:
 
@@ -121,8 +120,9 @@ Dokument *Gutschrift* erstellen:
 . Klicke rechts auf *Dokument erstellen* (material:add_note[]).
 . Wähle die Option *Gutschrift*. +
 → Das Fenster zum Erstellen des Dokuments wird geöffnet.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-document-credit-note>>.
-→ Der Gutschriftbeleg wird erzeugt.
+. Nimm bei Bedarf Einstellungen vor.
+. Klicke auf *Ausführen*.
+→ Das Dokument *Gutschrift* wird erzeugt.
 
 [#correct-and-cancel-credit-note-document]
 == Dokument Gutschrift korrigieren und stornieren
@@ -140,39 +140,28 @@ Das Stornieren eines Gutschriftdokuments dient der nachvollziehbaren Korrektur v
 Gehe zur Korrektur eines Gutschriftauftrags und der Erstellung eines *Stornobelegs Gutschrift* wie im Folgenden beschrieben vor.
 
 // adjust add_note icon to add once the changes are merged
-//can we rename Gutschrift into Gutschriftbeleg? Otherwhise this is really confusing...
 [.instruction]
 Gutschriftauftrag korrigieren:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne den Auftrag, in dem du das Gutschriftdokument stornieren möchtest.
+. Öffne den Gutschriftauftrag, in dem du das Gutschriftdokument stornieren möchtest.
 . Klicke im Bereich *Dokumente* auf *Dokument erstellen* (material:add_note[]).
 . Wähle die Option *Stornobeleg Gutschrift*. +
 *_Hinweis:_* Diese Option ist nur verfügbar, wenn bereits ein Gutschriftdokument erstellt wurde.
-. Nimm die Einstellungen vor.
+. Nimm bei Bedarf Einstellungen vor.
 . Klicke anschließend auf *Ausführen*. +
-→ Der Stornobeleg wird erzeugt und die Auftragseinstellungen des Guschriftauftrags entsperrt.
-. Bearbeite die Daten, die du korrigieren möchtest.
-//HIER WEITER
+→ Der Stornobeleg wird erzeugt.
+. Klicke anschließend erneut auf *Dokument erstellen* (material:add_note[]).
+. Wähle die Option *Gutschrift*, um ein neues Gutschriftdokument zu erstellen.
+. Nimm bei Bedarf Einstellungen vor.
+. Klicke anschließend auf *Ausführen* +
+→ Das neue Gutschriftdokument wird erzeugt.
 
-. Wechsle in das Tab *Belege*.
-. Wähle aus der Dropdown-Liste *Beleg erstellen* den *Stornobeleg*. +
-→ Ein Fenster mit optionalen Einstellungen öffnet sich.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Der Stornobeleg wird erzeugt und die Auftragseinstellungen des Gutschriftauftrags entsperrt.
-. Bearbeite die Daten, die du korrigieren möchtest.
-. Wechsle wieder in das Tab *Belege*.
-. Wähle aus der Dropdown-Liste *Beleg erstellen* das Dokument *Gutschrift*. +
-→ Ein Fenster mit optionalen Einstellungen öffnet sich.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Die Gutschrift wird erzeugt und die Auftragseinstellungen des Gutschriftauftrags erneut gesperrt.
-
-// auf neue UI anpassen
-[#550]
+[#booking-refunds]
 == Rückzahlungen buchen
 
-Nachdem du einen Gutschriftbeleg erstellt hast, muss die Rückzahlung des gutgeschriebenen Betrags in deinem plentymarkets System gebucht werden. Rückzahlungen über bestimmte Zahlungsarten, die du in deinem System eingerichtet hast, buchst du direkt im Tab *Einstellungen* des Gutschriftauftrags. Die Option *Rückzahlung an Kunden* wird nur bei den Zahlungsarten *PayPal*, *ClickandBuy* und *heidelpay* angezeigt.
+Nachdem du ein Gutschriftdokument erstellt hast, muss die Rückzahlung des gutgeschriebenen Betrags in deinem plentymarkets System gebucht werden. Rückzahlungen über bestimmte Zahlungsarten, die du in deinem System eingerichtet hast, buchst du direkt im Bereich *Zugeordnete Zahlungen* des Gutschriftauftrags.
 
 [IMPORTANT]
 .Bedingung bei PayPal
@@ -180,90 +169,42 @@ Nachdem du einen Gutschriftbeleg erstellt hast, muss die Rückzahlung des gutges
 Bei *PayPal* ist es nicht möglich, höhere Beträge einzugeben als mit der ursprünglichen Paypal-Transaktion bezahlt wurden.
 ====
 
-// auf neue UI anpassen
 [.instruction]
-Rückzahlung im Tab *Einstellungen* buchen:
+Rückzahlung buchen:
 
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Gutschriftauftrag, für den du eine Rückzahlung buchen möchtest.
-. Öffne das Tab *Einstellungen*.
-. Klicke bei der Option *Rückzahlung* auf das *Zahlungs-Icon*.
-. Prüfe den *Betrag* der Rückzahlung und passe diesen falls nötig an.
-. Klicke auf das *Zahnrad* (material:settings[]), um die Rückzahlung zu buchen. +
+. Gehe in den Bereich *Zugeordnete Zahlungen*.
+. Klicke auf *Zahlung erstellen* (material:add[]).
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-booking-refunds>>.
+. Klicke auf *Ausführen*. +
 → Die Rückzahlung wird gebucht.
 
-Alternativ ist es auch möglich, die Rückzahlung im Tab *Zahlung* des Gutschriftauftrags zu buchen. Im Tab *Zahlung* siehst du alle Zahlungen und Teilzahlungen, die zum Auftrag gehören. Das Rückbuchen der Zahlung in diesem Tab ist vor allem notwendig, wenn die Zahlung für den Hauptauftrag nicht über eine in plentymarkets integrierte Zahlungsart getätigt wurde.
-
-// auf neue UI anpassen
-[.instruction]
-Rückzahlung im Tab *Zahlung* buchen:
-
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
-. Öffne den Gutschriftauftrag, für den du eine Rückzahlung buchen möchtest.
-. Öffne das Tab *Zahlung*.
-. Klicke auf das Icon *Zahlung buchen*.
-. Gib den *Betrag* (Soll) sowie falls nötig eine *Währung* und einen *Verwendungszweck* ein.
-. Klicke auf *Zahlung buchen*. +
-→ Die Rückzahlung wird gebucht und wird im Tab *Zahlung* angezeigt.
-
-// anpassen
-[#book-back-items]
-== Waren zurückbuchen
-
-Wenn der Warenausgang bereits gebucht wurde und die Waren beispielsweise im Rahmen einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] wieder in das Lager zurückgebucht werden sollen, wird dies im Tab *Einstellungen* des Gutschriftauftrags vorgenommen.
-
-[.instruction]
-Warenbestand zurückbuchen:
-
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
-. Öffne den Gutschriftauftrag, für den der Warenbestand zurückgebucht werden soll.
-. Wechsle in das Tab *Einstellungen*.
-. Klicke bei der Option *Warenausgang* auf den Link *Warenbestand einbuchen*.
-. Wähle im angezeigten Fenster die gewünschte Option gemäß den Erläuterungen in <<table-settings-reverse-stock>>.
-. Klicke auf *Speichern* (material:save[]), um den Vorgang auszuführen.
-
-[[table-settings-reverse-stock]]
-.Optionen zur Rückbuchung des Warenbestandes
+[[table-booking-refunds]]
+.Einstellungen zum Buchen von Rückzahlungen
 [cols="1,3"]
-|====
-|Einstellung |Erläuterung
+|===
 
-| *Warenausgang komplett zurücksetzen*
-|Setzt den Warenausgang vollständig zurück. Auch das Datum des Warenausgangs im Hauptauftrag wird gelöscht.
+| *Auftrags-ID*
+|Zeigt die Auftrags-ID an.
 
-| *Warenbestand zurückbuchen*
-|Bucht die Artikel vollständig oder teilweise zurück. Bei dieser Option wird der Warenausgang *nicht* zurückgesetzt.
+| *Betrag*
+|Zeigt den Betrag an, der zurückgebucht wird. Passe den Betrag bei Bedarf an.
 
-| *Komplette Menge wählen*
-|Trägt die komplette Menge des Artikels im Auftrag in das Feld *Rückbuchen* ein.
+| *Haben/Soll*
+|Währe aus der Dropdown-Liste, ob es sich um eine Haben-/oder Soll-Buchung handelt.
 
-| *Komplette Menge abwählen*
-|Setzt die Artikelmengen unter *Rückbuchen* auf Null.
+| *Währung*
+|Wähle eine Währung aus der Dropdown-Liste.
 
-| *Rückbuchen*
-|Die Artikelmenge(n) eintragen, die zurückgebucht werden soll(en), wenn Teilmengen zurückgebucht werden sollen.
+| *Wechselkurs*
+|Zeigt den Wechselkurs an.
 
-| *Lager*
-|Das Lager wählen, in das die Artikel zurückgebucht werden sollen.
+| *Verwendungszweck*
+|Gib einen Verwendungszweck ein.
 
-| *Lagerort*
-|Den Lagerort wählen, in den die Artikel zurückgebucht werden sollen.
+| *Zahlungseingang*
+|Gib ein Datum für den Zahlungseingang ein oder wähle ein Datum über den Kalender (material:today[]). Das aktuelle Datum ist voreingestellt.
 
-| *Menge im Auftrag*
-|Zeigt die Menge der Artikel an, die im Auftrag enthalten sind.
-
-| *Zurückgebucht*
-|Zeigt bereits zurückgebuchte Artikelmengen an.
-
-| *Charge*
-|Zeigt die Chargennummer der Artikel an, die im Auftrag enthalten sind.
-
-| *MHD*
-|Zeigt das Mindesthaltbarkeitsdatum der Artikel an, die im Auftrag enthalten sind.
-
-| *ID*
-|ID des Artikels
-
-| *Artikel*
-|Name des Artikels
-|====
+|===
