--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -116,3 +116,50 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 
 
 [#redeem-coupon]
+== Gutscheine einlösen
+
+Du hast bereits einen Auftrag angelegt und möchtest im Nachhinein noch Gutschein-Codes hinzufügen? Mit der Funktion *Gutschein einlösen* ist dies für Aufträge und Vorbestellungen problemlos möglich. Je nachdem, ob es sich um eine plentymarkets Kampagne oder eine externe Kampagne handelt, sind unterschiedliche Einstellungen verfügbar. Um einen Gutschein einzulösen, gehe vor wie folgt.
+
+[.instruction]
+Gutscheine einlösen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*. +
+→ Die Auftragsübersicht wird geöffnet.
+. Führe die Suche aus oder nutze Filter, um Aufträge anzuzeigen.
+. Klicke in die Zeile eines Auftrags, um den Auftrag zu öffnen.
+. Klicke oben auf *Gutschein einlösen* (material:redeem[]). +
+→ Das Fenster *Gutschein einlösen* wird geöffnet.
+. Wähle zunächst, ob es sich um eine plentymarkets Kampagne oder eine externe Kampagne handelt.
+. Nimm die weiteren Einstellungen vor. Beachte dazu die Erläuterungen in <<table-redeem-coupon>>.
+. Klicke auf *Einlösen*. +
+→ Der Gutschein wird eingelöst.
+
+[[table-redeem-coupon]]
+.Gutscheine einlösen
+[cols=”1,3”]
+|===
+|*Einstellung* |*Erläuterung*
+
+2+^| *plentymarkets Kampagne*
+
+|*Code*
+|Gib den Gutschein-Code ein und klicke auf *Validieren*. Anschließend werden weitere Felder sichtbar, die allerdings nicht bearbeitet werden können.
+
+|*Typ*
+|Der Typ des Gutscheins wird angezeigt. Dieses Feld kann nicht bearbeitet werden.
+
+|*Wert in €*
+|Der Wert des Gutscheins wird in € angezeigt. Dieses Feld kann nicht bearbeitet werden.
+
+2+^| *Externe Kampagne*
+
+|*Code*
+|Gib den Gutschein-Code ein.
+
+|*Typ*
+|Wähle den Typ des Gutscheins.
+
+|*Wert in €*
+|Gib den Wert des Gutscheins in € ein.
+
+|===
