--- a/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
@@ -8,7 +8,7 @@ Gewährleistungen sind xref:auftraege:order-type-return.adoc#[Retouren] relativ 
 [TIP]
 .Garantie vs. Gewährleistung
 ====
-Im Gegensatz zur freiwillig erklärten Garantie handelt es sich bei der Gewährleistung um die *gesetzliche Pflicht* der Händler:innen, Mängel am Artikel, die bereits bei Lieferung bestanden haben, für Käufer:innen kostenlos zu beseitigen. Käufer:innen können die Gewährleistung gerichtlich bis zu 2 Jahre bei beweglichen Artikeln oder 3 Jahre bei unbeweglichen Artikeln geltend machen. Ab 6 Monaten nach Erhalt der Ware müssen Käufer:innen jedoch beweisen, dass die Mängel bereits bei Erhalt der Ware vorhanden waren.
+Im Gegensatz zur freiwillig erklärten Garantie handelt es sich bei der Gewährleistung um die *gesetzliche Pflicht* der Händler:innen, Mängel am Artikel, die bereits bei der Lieferung bestanden haben, für Käufer:innen kostenlos zu beseitigen. Käufer:innen können die Gewährleistung gerichtlich bis zu 2 Jahre bei beweglichen Artikeln oder 3 Jahre bei unbeweglichen Artikeln geltend machen. Ab 6 Monaten nach Erhalt der Ware müssen Käufer:innen jedoch beweisen, dass die Mängel bereits bei Erhalt der Ware vorhanden waren.
 ====
 
 Wenn ein Gewährleistungsfall vorliegt, entscheidest du als Händler:in, ob du Käufer:innen die Kosten erstattest, den Artikel reparierst oder den Artikel austauschst. Soll ein Umtausch durchgeführt werden, lege eine *Gewährleistung* an. Möchtest du das Geld erstatten, lege eine xref:auftraege:order-type-credit-note.adoc#[Gutschrift] für die Gewährleistung an. Ob du die *Versandkosten* in einer Gewährleistung übernimmst oder nicht, wählst du in den xref:auftraege:preparatory-settings.adoc#intable-shipping-costs-in-warranty[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen*.
@@ -32,24 +32,88 @@ Möchtest du dagegen erst den Eingang der Retoure abwarten und die Ware prüfen,
 
 // so korrekt für neue UI?
 [.instruction]
-Eine Gewährleistung anlegen:
+Gewährleistung anlegen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Suche (material:search[]) den Haupt- oder Retourenauftrag, für den du eine Gewährleistung anlegen möchtest.
 . Öffne den Auftrag.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]).
 . Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
+. Wählst du die Option *Für bestimmte Artikel*, nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-warranty>>.
 . *Speichere* (material:save[]) die Einstellungen. +
 → Die Gewährleistung wird angelegt.
 
 include::partial$create-order-type.adoc[]
+
+[[table-create-warranty]]
+.Einstellungen für Gewährleistungen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Status*
+|Wähle einen Status aus der Dropdown-Liste.
+
+| *Eigner*
+|Wähle einen Eigner aus der Dropdown-Liste.
+
+| *Versandkosten kopieren*
+|Wähle aus der Dropdown-Liste, ob die Versandkosten kopiert werden sollen.
+
+2+^| *Artikelinformationen*
+
+| *Füge alle offenen Mengen in den Warenkorb* (material:playlist_add[])
+|Fügt alle offenen Mengen dem Warenkorb hinzu.
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID an.
+
+| *Variantennummer*
+|Zeigt die Variantennummer an.
+
+| *Menge*
+|Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
+
+| *Verbleibende Stückzahl*
+|Zeigt die verbleibende Stückzahl des Artikels an.
+
+| *Offene Menge*
+|Zeigt die offene Menge des Artikels an.
+
+| *Artikelname*
+|Zeigt den Name des Artikels an.
+
+| *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
+|Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
+*_Tipp:_* Passe die Artikelmenge bei Bedarf im Feld *Menge* an.
+
+2+^| *Warenkorb*
+
+| *Artikel aus Warenkorb entfernen* (material:delete[])
+|Leert den Warenkorb komplett. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an.
+
+| *Varianten-ID*
+|Zeigt die Varianten-Id an.
+
+| *Menge*
+|Zeigt die Artikelmenge an. Passe die Menge bei Bedarf an.
+
+| *Artikelname*
+|Zeigt den Artikelname an. Passe den Name bei Bedarf an.
+
+|===
 
 [#edit-warranty]
 == Gewährleistung bearbeiten
 
 Gewährleistungsaufträge werden in der Auftragsübersicht angezeigt. Öffne eine Gewährleistung, um beispielsweise einen zusätzlichen *Preis* einzugeben, wenn du der Käufer:in einen höherpreisigen Artikel als Ersatz liefern möchtest. Falls nötig, können hier auch die Mengen der in der Gewährleistung enthaltenen Auftragspositionen verändert werden. Um eine Gewährleistung zu bearbeiten, gehe wie im Folgenden beschrieben vor.
 
-// so korrekt für neue UI?
 [.instruction]
 Gewährleistung bearbeiten:
 
@@ -75,28 +139,34 @@ Um die Bearbeitung einer Gewährleistung durch einen Umtausch abzuschließen, ge
 [.instruction]
 Gewährleistung durch Umtausch abschließen:
 
-. Öffne in der Gewährleistung das Tab *Belege*.
-. Wähle *Rechnung* aus der Dropdown-Liste *Beleg erstellen*. +
-→ Ein neues Bearbeitungsfenster öffnet sich. +
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die Rechnung wird erzeugt und in einem eigenen Tab geöffnet.
-. Wechsle in das Tab *Einstellungen*.
-. Klicke in der Zeile *Warenausgang* auf das Symbol *Warenausgang buchen*. +
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne die Gewährleistung, die du abschließen möchtest.
+. Gehe in den Bereich *Dokumente*.
+. Klicke rechts auf *Dokument erstellen* (material:add_note[]).
+. Wähle die Option *Rechnung*. +
+→ Das Fenster zum Erstellen der Rechnung wird geöffnet.
+. Nimm bei Bedarf Einstellungen vor.
+. Klicke auf *Ausführen*.
+→ Die Rechnung wird erzeugt.
+. Klicke anschließend oben in der Toolbar auf *Warenausgang buchen* (material:input).
+. Passe bei Bedarf das Datum des Warenausgangsdatum an.
+. Klicke auf *Ausführen*. +
 → Der Warenausgang wird gebucht und der *Status* wechselt automatisch zu *[7] Warenausgang gebucht*.
-. Wechsle in das Menü *Aufträge » Aufträge bearbeiten*.
+. Gehe anschließend in den Bereich *Staus und Tags*.
 . Setze den Status der Gewährleistung manuell auf Status *[10] Gewährleistung*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [TIP]
 .Zahlungseingang bei Gewährleistungen buchen
 ====
-Grundsätzlich müssen Zahlungen zu Gewährleistungen nur dann gebucht werden, wenn mit Käufer:innen ein Aufpreis vereinbart wurde. In diesem Fall buchst du den Zahlungseingang nach erfolgter Zahlung im Tab *Zahlung* der Gewährleistung.
+Grundsätzlich müssen Zahlungen zu Gewährleistungen nur dann gebucht werden, wenn mit Käufer:innen ein Aufpreis vereinbart wurde. In diesem Fall buchst du den Zahlungseingang nach erfolgter Zahlung im Bereich *Zugeordnete Zahlungen* der Gewährleistung.
 ====
 
 Um die Bearbeitung einer Gewährleistung durch eine Gutschrift an die Käufer:in abzuschließen, gehe wie im Folgenden beschrieben vor.
 
 // korrekt so für neue UI? oder hier "Für alle Arikel" wählen, da Gewährleistund abgeschlossen werden soll?
-
+//IN NEUER UI KANN MAN IN EINER GEWÄHRLEISTUNG KEINE GUTSCHRIFT ANLEGEN
 [.instruction]
 Gewährleistung durch Gutschrift abschließen:
 
@@ -112,6 +182,22 @@ Gewährleistung durch Gutschrift abschließen:
 
 include::partial$create-order-type.adoc[]
 
+[[table-settings-credit-note]]
+.Einstellungen für Gutschriften in Gewährleistungen
+[cols="1,3"]
+|===
+
+|
+|
+
+|
+|
+
+|
+|
+
+|
+|
 //hier tabelle mit einstellungen hinzufügen (für bestimmte Artikel)
 
 // prüfen: für neue UI noch korrekt?
