--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -693,6 +693,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:august-2022.adoc[Changelogs August 2022]
+** xref:changelog:2022-08-10.adoc[Changelog 10. August 2022]
 ** xref:changelog:2022-08-03.adoc[Changelog 03. August 2022]
 * xref:changelog:july-2022.adoc[Changelogs Juli 2022]
 ** xref:changelog:2022-07-27.adoc[Changelog 27. Juli 2022]
