fix error messages - EN

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -487,7 +487,7 @@ After you have created a catalogue, map the market's data fields to item data sa
 [TIP]
 .Using properties
 ====
-Use xref:item:managing-items.adoc#500[properties] to export values for marketplace data fields that have no corresponding field in plentymarkets.
+Use xref:item:properties.adoc#500[properties] to export values for marketplace data fields that have no corresponding field in plentymarkets.
 ====
 
 :own-data-fields:
@@ -646,7 +646,7 @@ include::_includes:partial$event-procedure.adoc[]
 [TIP]
 .Status and filters for the event procedure
 ====
-The status and filters listed in <<#creating-invoices-kaufland>> only serve as an example for creating an event procedure. Select filters and statuses for the event procedure which best suit your workflow.
+The status and filters listed in <<#event-procedure-invoices-kaufland>> only serve as an example for creating an event procedure. Select filters and statuses for the event procedure which best suit your workflow.
 ====
 
 [[event-procedure-invoices-kaufland]]
