--- a/docs/en-gb/modules/markets/pages/twenga.adoc
+++ b/docs/en-gb/modules/markets/pages/twenga.adoc
@@ -50,7 +50,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: TwengaCOM-Plugin
 
-include::partial$download_export-file.adoc[]
+include::markets:partial$download_export-file.adoc[]
 
 [#columns-export-file]
 .Available columns for the export format
@@ -125,11 +125,6 @@ include::partial$catalogue-new-to-text.adoc[]
 
 include::partial$catalogue-creation.adoc[]
 
-[#filter-export]
-=== _Optional:_ Exporting specific items
-
-include::partial$catalogue-filters.adoc[]
-
 [#data-field-mappings]
 === Mapping data fields in the catalogue
 
@@ -147,6 +142,17 @@ include::partial$recommendation-text.adoc[]
 --
 include::partial$twenga-recommended-mappings.adoc[]
 --
+
+[#filter-export]
+=== _Optional:_ Exporting specific items
+
+include::partial$catalogue-filters.adoc[]
+
+[#catalogue-settings]
+==== Setting up catalogue export
+
+:csv-txt:
+include::partial$catalogue-settings.adoc[]
 
 [#catalogue-activation]
 ==== Activating the catalogue
