--- a/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
@@ -170,7 +170,7 @@ Variations without stock limitation are variations with the setting *Limitation*
 * *None*
 * *Do not administer stock for this variation*
 
-You can find this setting in the menu xref:item:managing-items.adoc#200, Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]. This setting is valid for all sales channels, not just for {market}.
+You can find this setting in the menu *Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]*. This setting is valid for all sales channels, not just for {market}.
 
 |======
 --
