--- a/docs/en-gb/modules/markets/partials/activate-characteristic.adoc
+++ b/docs/en-gb/modules/markets/partials/activate-characteristic.adoc
@@ -1,4 +1,4 @@
-To use xref:item:edit-item.adoc#480[characteristics] for {market}, each characteristic must be activated for the market.
+To use xref:item:properties.adoc#100[characteristics] for {market}, each characteristic must be activated for the market.
 
 [.instruction]
 Activating characteristic for the market:
